Mon Mar  5 13:56:33 2001  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>

	* ace/Synch_T.{h,i}: Added a new ACE_Guard constructor that
	  allows the caller to select whether the guard owns/acquires the
 	  lock or not.  Thanks to Chris Kohlhoff <chris@kohlhoff.com> for
 	  contributing this.

	* ace/Synch_T.{h,i}: Added a disown() method that relinquishes
 	  ownership of the lock so that it is not released implicitly in
 	  the destructor.  Thanks to Chris Kohlhoff <chris@kohlhoff.com>
 	  for contributing this.

	* ace/Event_Handler.h: Updated the comment on handle_close() so that
	  it more accurately reflects what is going on.  Thanks to Defang
 	  Zhou <dzhou@inktomi.com> for suggesting this.

	* apps/Gateway/Gateway/Concrete_Connection_Handlers.{h,cpp}: Added
	  handle_close() operations to solve problems with certain
 	  concurrency models.  Thanks to Defang Zhou <dzhou@inktomi.com>
 	  for reporting this.

Mon Mar  5 11:29:36 2001  Carlos O'Ryan  <coryan@uci.edu>

        * docs/ACE-categories.html:
          Fixed links to the doxygen files.

        * ace/Pipe.cpp:
          Fixed what looks like a typo, we want to *disable* the stream
          pipes under QNX, not to enable them just on that platform.

Mon Mar  5 08:20:21 2001  Carlos O'Ryan  <coryan@uci.edu>

        * tests/RMCast/RMCast_Fragment_Test.cpp:
        * tests/RMCast/RMCast_Reassembly_Test.cpp:
          Undo Doug's changes.  They broke the test.

Mon Mar  5 07:52:52 2001  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>

	* ace/Log_Record.cpp (priority): Clarified the behavior of the
	  priority() set/get methods.  Thanks to Christian Schuhegger
 	  <Christian.Schuhegger@cern.ch> for reporting this.

	* tests/RMCast/RMCast_Fragment_Test.cpp,
	* tests/RMCast/RMCast_Reassembly_Test.cpp,
	* tests/Dynamic_Priority_Test.cpp,
	* tests/Thread_Pool_Test.cpp: Make sure to write into the
	  wr_ptr() rather than the rd_ptr().  Thanks to Gonzalo Diethelm